Fix an issue with the .align-center class

--- a/web/themes/custom/frontend/src/scss/components/general.scss
+++ b/web/themes/custom/frontend/src/scss/components/general.scss
@@ -496,8 +496,6 @@ blockquote{
 }
 
 .align-center {
-  margin-left: -50%;
-  transform: translate(50%);
   display: inline-block;
 }
 
